Drop express No need for a specific express object.  Return function(req,res) and rely on `fn` being pre-defined in the query arguments.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-clues",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Provide clues as an express API",
   "keywords": [
     "promises",
@@ -13,8 +13,7 @@
   },
    "dependencies": {
     "clues": "1.0.x",
-    "when":"2.4.x",
-    "express":"3.4.0"
+    "when":"2.4.x"
   },
   "main": "index.js",
   "license": "MIT"
